Colour consolidation done for testing

--- a/packages/accordion/src/scss/_global.scss
+++ b/packages/accordion/src/scss/_global.scss
@@ -1,9 +1,9 @@
 @use "../../node_modules/@uq-uidf/core/src/scss/_global" as *;
 
 // Variables, functions, and mixins
-$accordion-border-color: #e9e9e9;
-$accordion-title-bg: #f9f9f9;
-$accordion-title-bg-hover: #eee;
-$accordion-icon-color: #bbb;
+$accordion-border-color: #e7e3e0; //e9e9e9;
+$accordion-title-bg: #f7f6f5; //f9f9f9;
+$accordion-title-bg-hover: #efedeb; //eee;
+$accordion-icon-color: #aca7a3; //bbb;
 $accordion-content-bg: $uq-white;
-$accordion-editor-outline: #f00;
+$accordion-editor-outline: #be1b38; //f00;
