--- a/packages/alert/src/scss/_global.scss
+++ b/packages/alert/src/scss/_global.scss
@@ -1,4 +1,4 @@
-$alert-default-bg-color: #EFEFEF !default;
+$alert-default-bg-color: #efedeb!default; //EFEFEF !default;
 $alert-info-bg-color: #D4F0FF !default;
 $alert-success-bg-color: #D5EECA !default;
 $alert-warning-bg-color: #FFE0AD !default;
@@ -9,5 +9,5 @@ $alert-font-size-md: 1rem !default;
 $alert-font-size-lg: 1rem !default;
 
 $alert-font-weight: 300 !default;
-$alert-text-color: #222 !default;
-$alert-close-color: #747474 !default;
+$alert-text-color: #2b2a29 !default; //222 !default;
+$alert-close-color: #817d7a !default; //747474 !default;
