--- a/packages/body/src/scss/_global.scss
+++ b/packages/body/src/scss/_global.scss
@@ -10,23 +10,23 @@ $h6-font-size: 1rem;
 
 // Blockquotes
 $blockquote-indent-amount: 1rem;
-$blockquote-border-color: #eee;
+$blockquote-border-color: #efedeb; //eee
 
 // Horizontal rule
-$hr-border-color: #ddd;
+$hr-border-color: #D7D1CC; //ddd
 
 // Images
-$img-border-color: #ddd;
-$figure-caption-bg: #eee;
+$img-border-color: #D7D1CC; //ddd
+$figure-caption-bg: #efedeb; //eee
 
 // Tables
-$table-border-color: #ddd;
-$table-header-bg: #fcfcfc;
+$table-border-color: #D7D1CC; //ddd
+$table-header-bg: #f7f6f5; //fcfcfc
 
 // Table striping
-$table-header-striped-bg: #eee;
-$table-row-striped-bg: #fcfcfc;
+$table-header-striped-bg: #efedeb; //eee
+$table-row-striped-bg: #f7f6f5; //fcfcfc
 
 // Code
-$code-border-color: #eee;
-$code-bg: #f5f5f5;
+$code-border-color: #efedeb; //eee
+$code-bg: #f7f6f5; //f5f5f5
