--- a/packages/form/src/scss/_global.scss
+++ b/packages/form/src/scss/_global.scss
@@ -1,6 +1,6 @@
 // Variables, functions, and mixins
 
 // Forms
-$form-required-color: #d6492a;
-$form-description-color: #666;
-$form-input-border-color: #ccc;
+$form-required-color: #be1b38; //d6492a;
+$form-description-color: #565452; //666;
+$form-input-border-color: #aca7a3; //ccc;
