--- a/packages/main-menu/src/scss/_global.scss
+++ b/packages/main-menu/src/scss/_global.scss
@@ -2,8 +2,8 @@
 
 $main-menu-color: $uq-black;
 $main-menu-bg-color: $uq-white;
-$main-menu-secondary-bg-color: #f2f2f2;
-$main-menu-bg-hover: darken(#f2f2f2, 4.5%);
-$main-menu-border: darken(#f2f2f2, 10%);
+$main-menu-secondary-bg-color: #f7f6f5; //f2f2f2;
+$main-menu-bg-hover: darken(#f7f6f5, 4.5%); //f2f2f2;
+$main-menu-border: darken(#f7f6f5, 10%); //f2f2f2;
 
-$search-input-border-color: #ccc;
+$search-input-border-color: #aca7a3; //ccc;
