--- a/packages/card/src/scss/_component.scss
+++ b/packages/card/src/scss/_component.scss
@@ -36,10 +36,10 @@
 
   &__footer {
     .card__link-column {
-      border-top: 1px solid #eee;
+      border-top: 1px solid #efedeb; //eee;
 
       & + .card__link-column {
-        border-left: 1px solid #eee;
+        border-left: 1px solid #efedeb; //eee;
       }
     }
     .card__link {
@@ -77,7 +77,7 @@
   // Force image heights to be the same for cards sitting next to each other.
   &__image-container {
     @include background-cover();
-    background-color: #eee;
+    background-color: #efedeb; //eee;
     height: 18rem;
     overflow: hidden;
     position: relative;
