--- a/packages/pane/src/scss/_global.scss
+++ b/packages/pane/src/scss/_global.scss
@@ -1,5 +1,5 @@
 @use '@uq-uidf/core/src/scss/_global' as *;
 
-$pane-border: #eee;
-$pane-shaded-bg: #f5f5f5;
+$pane-border: #efedeb; //eee;
+$pane-shaded-bg: #f7f6f5; //f5f5f5;
 $pane-title-color: $uq-purple;
