colour consolidation left overs

--- a/packages/grid-menu/src/scss/_global.scss
+++ b/packages/grid-menu/src/scss/_global.scss
@@ -5,7 +5,7 @@
 
 $linked-list-color: $link-color;
 $linked-list-color-hover: $uq-white;
-$linked-list-desc: #222;
+$linked-list-desc: #2b2a29; //222;
 $linked-list-desc-hover: $uq-white;
 
 // Two column layout.
