Recommended colors substituted to its variables

--- a/packages/blockquote/src/scss/_component.scss
+++ b/packages/blockquote/src/scss/_component.scss
@@ -62,11 +62,11 @@ $image-path: '../images' !default;
 	background-image: url('#{$image-path}/icon-open-doublequote-light.svg');
 	background-size: cover;
 	display: inline-block;
-	fill: #000;
+	fill: $uq-black;
 	height: 28px;
 	left: -20px;
 	position: absolute;
-	stroke: #000;
+	stroke: $uq-black;
 	stroke-width: 0;
 	top: 0px;
 	width: 34px;
