--- a/packages/body/src/scss/_global.scss
+++ b/packages/body/src/scss/_global.scss
@@ -1,4 +1,5 @@
 // Variables, functions, and mixins
+@use "../../node_modules/@uq-uidf/core/src/scss/global" as *;
 
 // Headings
 $h1-font-size: 2.438rem;
@@ -10,23 +11,23 @@ $h6-font-size: 1rem;
 
 // Blockquotes
 $blockquote-indent-amount: 1rem;
-$blockquote-border-color: #efedeb; //eee
+$blockquote-border-color: $uq-neutral-light40; //eee
 
 // Horizontal rule
-$hr-border-color: #D7D1CC; //ddd
+$hr-border-color: $uq-neutral; //ddd
 
 // Images
-$img-border-color: #D7D1CC; //ddd
-$figure-caption-bg: #efedeb; //eee
+$img-border-color: $uq-neutral; //ddd
+$figure-caption-bg: $uq-neutral-light40; //eee
 
 // Tables
-$table-border-color: #D7D1CC; //ddd
-$table-header-bg: #f7f6f5; //fcfcfc
+$table-border-color: $uq-neutral; //ddd
+$table-header-bg: $uq-neutral-light20; //fcfcfc
 
 // Table striping
-$table-header-striped-bg: #efedeb; //eee
-$table-row-striped-bg: #f7f6f5; //fcfcfc
+$table-header-striped-bg: $uq-neutral-light40; //eee
+$table-row-striped-bg: $uq-neutral-light20; //fcfcfc
 
 // Code
-$code-border-color: #efedeb; //eee
-$code-bg: #f7f6f5; //f5f5f5
+$code-border-color: $uq-neutral-light40; //eee
+$code-bg: $uq-neutral-light20; //f5f5f5
