--- a/packages/button/src/scss/_global.scss
+++ b/packages/button/src/scss/_global.scss
@@ -11,9 +11,9 @@ $button-bg-hover-color: $link-active-color;
 $button-border-color: $link-color;
 $button-border-hover-color: $link-active-color;
 
-$button-secondary-color: #2b2a29; //2b2b2b;
+$button-secondary-color: $uq-neutral-dark80; //2b2b2b;
 $button-secondary-hover-color: $uq-black;
-$button-secondary-bg-color: #D7D1CC; //d7d1cc;
-$button-secondary-bg-hover-color: #aca7a3; //bdb0a5;
-$button-secondary-border-color: #D7D1CC; //d7d1cc;
-$button-secondary-border-hover-color: #aca7a3; //bdb0a5;
+$button-secondary-bg-color: $uq-neutral; //d7d1cc;
+$button-secondary-bg-hover-color: $uq-neutral-dark20; //bdb0a5;
+$button-secondary-border-color: $uq-neutral; //d7d1cc;
+$button-secondary-border-hover-color: $uq-neutral-dark20; //bdb0a5;
