--- a/packages/core/src/scss/_global.scss
+++ b/packages/core/src/scss/_global.scss
@@ -38,8 +38,8 @@ $uq-black: #000000;
 $uq-white: #ffffff;
 // UQ Secondary palette
 $uq-purple-light: #962A8B;
-$uq-neutral1: #D7D1CC;
-$uq-neutral2: #999490;
+$uq-neutral: #D7D1CC;
+$uq-darkgrey: #999490;
 $uq-gold: #BDA14E;
 $uq-red: #E62645;
 $uq-orange: #EB602B;
@@ -49,6 +49,24 @@ $uq-aqua: #00ABCD;
 $uq-green: #2EA836;
 // UQ Purple gradient
 $uq-purple-gradient: linear-gradient(90deg, rgba(81, 36, 122, 1) 0%, 87%, rgba(150, 42, 139, 1) 100%);
+// Additional
+$uq-neutral-light20: #f7f6f5;
+$uq-neutral-light40: #efedeb;
+$uq-neutral-light60: #e7e3e0;
+$uq-neutral-light80: #dfdad6;
+$uq-neutral-dark20: #aca7a3;
+$uq-neutral-dark40: #817d7a;
+$uq-neutral-dark60: #565452;
+$uq-neutral-dark80: #2b2a29;
+
+$uq-darkgrey-light20: #ebeae9;
+$uq-darkgrey-light40: #d6d4d3;
+$uq-darkgrey-light60: #c2bfbc;
+$uq-darkgrey-light80: #ada9a6;
+
+$uq-red-dark20: #be1b38;
+$uq-red-dark40: #9b1129;
+
 // Link Blue
 $link: #2377cb;
 $link-hover: #005ea5;
@@ -57,109 +75,109 @@ $link-color: #2377cb;
 $link-active-color: #005ea5;
 $link-hover-color: #005ea5;
 // External link icon
-$external-link-icon-color: #aca7a3; //bbb;
+$external-link-icon-color: $uq-neutral-dark20; //bbb;
 // Alerts
-$alert: #be1b38; //B80017;
+$alert: $uq-red-dark20; //B80017;
 // UQ brand colours
 $uq-dark-purple: #51247A;
 // $uq-green: #8cb800; Deprecated because of duplicate naming.
 // Vertical lists
-$vertical-list-border: #efedeb; //EDEDED;
+$vertical-list-border: $uq-neutral-light40; //EDEDED;
 // Vertical Menu
-$vertical-menu-link-border: #f7f6f5; //f5f5f5;
-$vertical-menu-link-active: #000;
-$vertical-menu-shaded-bg-color: #f7f6f5; //f6f6f6;
+$vertical-menu-link-border: $uq-neutral-light20; //f5f5f5;
+$vertical-menu-link-active: $uq-black;
+$vertical-menu-shaded-bg-color: $uq-neutral-light20; //f6f6f6;
 // Administration
-$primary-tabs-bg: #efedeb; //eee;
+$primary-tabs-bg: $uq-neutral-light40; //eee;
 // Messages
 $messages-status-bg: #eef5fb;
 $messages-status-border-color: #8ebae7;
-$messages-status-color: #000;
+$messages-status-color: $uq-black;
 $messages-warning-bg: #fff9ee;
 $messages-warning-border-color: #ffd179;
-$messages-warning-color: #000;
-$messages-error-bg: #d8481f;
-$messages-error-border-color: #d8481f;
-$messages-error-color: #fff;
-$messages-error-link-color: #fff;
+$messages-warning-color: $uq-black;
+$messages-error-bg: $uq-red-dark20; //#d8481f;
+$messages-error-border-color: $uq-red-dark20; //#d8481f;
+$messages-error-color: $uq-white;
+$messages-error-link-color: $uq-white;
 // Progress Bar
-$progress-bar-bg: #D7D1CC; //ddd;
-$progress-bar-fill-bg: #565452; //444;
-$progress-bar-border-color: #817d7a; //949494;
-$progress-bar-color: #fff;
+$progress-bar-bg: $uq-neutral; //ddd;
+$progress-bar-fill-bg: $uq-neutral-dark60; //444;
+$progress-bar-border-color: $uq-neutral-dark40; //949494;
+$progress-bar-color: $uq-white;
 // Progression
-$progression-text: #fff;
+$progression-text: $uq-white;
 $progression-border: $progression-text;
-$progression-label: #2b2a29; //222;
-$progression-step-bg: #999490;
-$progression-bar-bg: #D7D1CC;
-$progression-completed: #2EA836;
+$progression-label: $uq-neutral-dark80; //222;
+$progression-step-bg: $uq-darkgrey;
+$progression-bar-bg: $uq-neutral;
+$progression-completed: $uq-green;
 // Sections
-$section-shaded-bg: #f7f6f5; //f5f5f5;
-$section-summary-color: #817d7a; //767676;
-$section-footer-color: #817d7a; //767676;
+$section-shaded-bg: $uq-neutral-light20; //f5f5f5;
+$section-summary-color: $uq-neutral-dark40; //767676;
+$section-footer-color: $uq-neutral-dark40; //767676;
 // Palettes
-$light-palette-color: #f7f6f5; //f0f0f0;
+$light-palette-color: $uq-neutral-light20; //f0f0f0;
 $light-palette-border-color: rgba(255, 255, 255, .4);
-$light-palette-link-color: #fff;
-$light-palette-bg: #fff;
-$dark-palette-color: #2b2a29; //222;
+$light-palette-link-color: $uq-white;
+$light-palette-bg: $uq-white;
+$dark-palette-color: $uq-neutral-dark80; //222;
 $dark-palette-border-color: rgba(0, 0, 0, .1);
 $dark-palette-link-color: lighten($uq-purple, 10%);
-$dark-palette-bg: #565452; //333;
+$dark-palette-bg: $uq-neutral-dark60; //333;
 // Tints
-$dark-tint-bg: #565452; //494949;
+$dark-tint-bg: $uq-neutral-dark60; //494949;
 // Hero banner
-$hero-banner-bg: #565452; //494949;
+$hero-banner-bg: $uq-neutral-dark60; //494949;
 // Menu Block two column
 $menu-block-two-column-link-color: $link-color;
-$menu-block-two-column-inactive-link-color: #2b2a29; //222;
-$menu-block-two-column-border-color: #efedeb; //eee;
+$menu-block-two-column-inactive-link-color: $uq-neutral-dark80; //222;
+$menu-block-two-column-border-color: $uq-neutral-light40; //eee;
 // Page
-$page-header-bg: #f7f6f5; //f2f2f2;
-$page-header-white-bg: #fff;
-$page-header-white-border-color: #efedeb; //eee;
+$page-header-bg: $uq-neutral-light20; //f2f2f2;
+$page-header-white-bg: $uq-white;
+$page-header-white-border-color: $uq-neutral-light40; //eee;
 // Tabs
-$tabs-shaded-bg: #f7f6f5; //f5f5f5;
-$tabs-underlined-border-color: #e7e3e0; //e3dbe8;
+$tabs-shaded-bg: $uq-neutral-light20; //f5f5f5;
+$tabs-underlined-border-color: $uq-neutral-light60; //e3dbe8;
 // Article
-$article-title-color: #565452; //555;
-$article-border-color: #efedeb; //eee;
-$article-tag-bg: #f7f6f5; //f3f3f3;
-$article-tag-color: #565452; //666;
+$article-title-color: $uq-neutral-dark60; //555;
+$article-border-color: $uq-neutral-light40; //eee;
+$article-tag-bg: $uq-neutral-light20; //f3f3f3;
+$article-tag-color: $uq-neutral-dark60; //666;
 // Icons
-$icon-light-grey-color: #D7D1CC; //ddd;
+$icon-light-grey-color: $uq-neutral; //ddd;
 // Catalogue
-$catalogue-index-bg: #f5f5f5; //f7f6f5;
-$catalogue-index-color: #565452; //555;
-$catalogue-meta-color: #efedeb; //eee;
+$catalogue-index-bg: $uq-neutral-light20; //f7f6f5;
+$catalogue-index-color: $uq-neutral-dark60; //555;
+$catalogue-meta-color: $uq-neutral-light40; //eee;
 // Citation (eSpace)
-$citation-color: #817d7a; //868686;
+$citation-color: $uq-neutral-dark40; //868686;
 // Tags
-$tags-link-bg: #f7f6f5; //f5f5f5;
+$tags-link-bg: $uq-neutral-light20; //f5f5f5;
 // Action items
-$action-item-bg: #f5f5f5;
-$action-item-icon-bg: #D7D1CC; //dbdbdb;
+$action-item-bg: $uq-neutral-light20;
+$action-item-icon-bg: $uq-neutral; //dbdbdb;
 // Team
-$team-teaser-action-links: #565452; //666;
+$team-teaser-action-links: $uq-neutral-dark60; //666;
 // Asset
-$asset-border-color: #aca7a3; //ccc;
+$asset-border-color: $uq-neutral-dark20; //ccc;
 // Cards
-$card-shaded-bg: #f7f6f5; //f5f5f5;
+$card-shaded-bg: $uq-neutral-light20; //f5f5f5;
 // Overview brand device connector
-$brand-device-connector: #e7e3e0; //E1E1E1;
+$brand-device-connector: $uq-neutral-light60; //E1E1E1;
 // Compendium
-$compendium-border-color: #aca7a3; //ccc;
-$compendium-title-border-color: #D7D1CC; //ddd;
+$compendium-border-color: $uq-neutral-dark20; //ccc;
+$compendium-title-border-color: $uq-neutral; //ddd;
 // Logo
-$logo-color: #fff;
+$logo-color: $uq-white;
 // Content column block
 $content-column-block-pane-bg: #2468c6;
 $content-column-block-pane-odd-bg: #22487e;
 // Divider
-$divider-border-color: #efedeb; //ededed;
+$divider-border-color: $uq-neutral-light40; //ededed;
 // Compact
-$compact-content-color: #817d7a; //767676;
+$compact-content-color: $uq-neutral-dark40; //767676;
 
 //
 // Mixins
