--- a/packages/footer/src/scss/_component.scss
+++ b/packages/footer/src/scss/_component.scss
@@ -13,6 +13,7 @@
     a {
         color: $site-footer-link-color;
         font-weight: 500;
+        text-decoration: none;
     }
     abbr[title] {
         text-decoration: none;
