--- a/packages/storybook-html/src/components/footer/footer.html
+++ b/packages/storybook-html/src/components/footer/footer.html
@@ -1,56 +1,56 @@
 <!-- Footer No Foundation --> 
-<footer class="footer" data-gtm-category="Footer">
-    <div class="footer__content">
+<footer class="uq-footer" data-gtm-category="Footer">
+    <div class="uq-footer__content">
   
-      <div class="flex-container">
-          <div class="flex-item">
-              <div class="acknowledgement-statement">
-                  UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. — <a href="" class="acknowledgement-statement__link">Reconciliation statement</a>
+      <div class="uq-flex-container">
+          <div class="uq-flex-item">
+              <div class="uq-acknowledgement-statement">
+                  UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. — <a href="" class="uq-acknowledgement-statement__link">Reconciliation statement</a>
               </div>
           </div>
       </div>
   
-      <div class="flex-container">
-          <div class="flex-item">
-              <div class="footer__copyright">© The University of Queensland</div>
-              <div class="footer__contact">
-                  Enquiries: <a href="tel:+61733651111" class="footer__link footer__enquiries-phone" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Enquiries phone'});"><span itemprop="telephone">+61 7 3365 1111</span></a>                    &nbsp; | &nbsp; <a href="https://uq.edu.au/contacts" class="footer__link footer__contacts-link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Contact directory'});">Contact directory</a>
+      <div class="uq-flex-container">
+          <div class="uq-flex-item">
+              <div class="uq-footer__copyright">© The University of Queensland</div>
+              <div class="uq-footer__contact">
+                  Enquiries: <a href="tel:+61733651111" class="uq-footer__link footer__enquiries-phone" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Enquiries phone'});"><span itemprop="telephone">+61 7 3365 1111</span></a>                    &nbsp; | &nbsp; <a href="https://uq.edu.au/contacts" class="uq-footer__link footer__contacts-link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Contact directory'});">Contact directory</a>
               </div>
-              <div class="footer__meta">
+              <div class="uq-footer__meta">
                   <abbr title="Australian Business Number">ABN</abbr>: 63 942 912 684 &nbsp; | &nbsp;
-                  <abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr> Provider No: <a class="footer__link cricos__link" href="https://www.uq.edu.au/about/cricos-link" rel="external" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'CRICOS'});">00025B</a>
+                  <abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr> Provider No: <a class="uq-footer__link cricos__link" href="https://www.uq.edu.au/about/cricos-link" rel="external" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'CRICOS'});">00025B</a>
               </div>
           </div>
-          <div class="flex-item">
-              <div class="footer__emergency-contact footer__aside">
-                      <strong class="footer__sub-title">Emergency</strong><br> Phone: <a href="tel:+61733653333" class="footer__link footer__emergency-phone" onclick="gtag('event', 'click',
+          <div class="uq-flex-item">
+              <div class="uq-footer__emergency-contact uq-footer__aside">
+                      <strong class="uq-footer__sub-title">Emergency</strong><br> Phone: <a href="tel:+61733653333" class="uq-footer__link footer__emergency-phone" onclick="gtag('event', 'click',
                 {'event_category': 'UQ Footer', 'event_label': 'Emergency phone'});">3365 3333</a>
               </div>
           </div>
       </div>
       
-      <div class="footer__footer">
-        <div class="flex-container">
-            <div class="flex-item">
-                <div class="menu-footer">
-                    <ul class="menu-footer__list">
-                        <li class="menu-footer__item">
-                            <a href="https://www.uq.edu.au/terms-of-use/" rel="external" class="menu-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Privacy'});">Privacy &amp; Terms of use</a>
+      <div class="uq-footer__footer">
+        <div class="uq-flex-container">
+            <div class="uq-flex-item">
+                <div class="uq-menu-footer">
+                    <ul class="uq-menu-footer__list">
+                        <li class="uq-menu-footer__item">
+                            <a href="https://www.uq.edu.au/terms-of-use/" rel="external" class="uq-menu-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Privacy'});">Privacy &amp; Terms of use</a>
                         </li>
-                        <li class="menu-footer__item">
-                            <a href="https://www.uq.edu.au/rti/" rel="external" class="menu-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Right to Information'});">Right to Information</a>
+                        <li class="uq-menu-footer__item">
+                            <a href="https://www.uq.edu.au/rti/" rel="external" class="uq-menu-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Right to Information'});">Right to Information</a>
                         </li>
-                        <li class="menu-footer__item">
-                            <a href="" rel="" class="menu-footer__link">Accessibility</a>
+                        <li class="uq-menu-footer__item">
+                            <a href="" rel="" class="uq-menu-footer__link">Accessibility</a>
                         </li>
-                        <li class="menu-footer__item">
-                            <a href="https://its.uq.edu.au/feedback?r=https://uq.edu.au" rel="external" class="menu-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Feedback'});">Feedback</a>
+                        <li class="uq-menu-footer__item">
+                            <a href="https://its.uq.edu.au/feedback?r=https://uq.edu.au" rel="external" class="uq-menu-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Feedback'});">Feedback</a>
                         </li>
                     </ul>
                 </div>
             </div>
-            <div class="flex-item">
-                <a href="" class="footer__login-link footer__aside" rel="nofollow">Login</a>
+            <div class="uq-flex-item">
+                <a href="" class="uq-footer__login-link uq-footer__aside" rel="nofollow">Login</a>
             </div>
         </div>
       </div>
