accessibility href linking fixed

--- a/packages/storybook-html/src/components/footer/footer.html
+++ b/packages/storybook-html/src/components/footer/footer.html
@@ -41,7 +41,7 @@
                             <a href="https://www.uq.edu.au/rti/" rel="external" class="uq-menu-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Right to Information'});">Right to Information</a>
                         </li>
                         <li class="uq-menu-footer__item">
-                            <a href="" rel="" class="uq-menu-footer__link">Accessibility</a>
+                            <a href="https://uq.edu.au/accessibility/" rel="external" class="uq-menu-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Accessibility'});">Accessibility</a>
                         </li>
                         <li class="uq-menu-footer__item">
                             <a href="https://its.uq.edu.au/feedback?r=https://uq.edu.au" rel="external" class="uq-menu-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Feedback'});">Feedback</a>
